cinnamon: Fix squished sound applet buttons
Based on upstream commit:
https://github.com/linuxmint/cinnamon/commit/7ea5ec059b131160d5e1df9209033fc683c3e202

--- a/common/cinnamon/3.6/sass/_common.scss
+++ b/common/cinnamon/3.6/sass/_common.scss
@@ -1317,7 +1317,7 @@ StScrollBar {
 
     StButton:small {
       width: 16px;
-      height: 8px;
+      height: 16px;
       padding: 1px;
 
       StIcon { icon-size: 12px; }
@@ -1339,8 +1339,8 @@ StScrollBar {
     color: $osd_fg_color;
 
     StButton {
-      width: 22px;
-      height: 13px;
+      width: 18px;
+      height: 18px;
       padding: 5px;
       color: $osd_fg_color;
       border-radius: 2px;
